# ultracua

./: .gitattributes  .gitignore  ARCHITECTURE.md  EXAMPLES.md  GUIDE.md  HEALING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  STATUS.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
baselines/: README.md  demo.json  drift.json  miniwob.json  miniwob_bestof3.json  miniwob_reflect3.json  recorder_ceiling.json
benchmarks/: __init__.py  bench.py  drift_sandbox.py  miniwob_bench.py  miniwob_env.py  recorder_ceiling.py  shop_flow.py  variance.py  webarena_bench.py  webarena_env.py  webarena_run.py  write_flow_bench.py
benchmarks/configs/: config.example.json
docs/: recorder-spike.md
evals/: README.md  __init__.py  core.py  fixtures.py  run.py
examples/: demo.py  hn_digest.py
src/ultracua/: cli.py  (+25 more)
tests/: test_best_of_n.py  test_browser_lifecycle.py  test_cache.py  test_canary.py  test_cli.py  test_contracts.py  test_daemon.py  test_drift_sandbox.py  test_flow.py  test_flows.py  test_grounding.py  test_heal.py  test_health_lock.py  test_ledger.py  test_llm.py  test_llm_agent_parse.py  test_llm_cassette.py  test_llm_tiers.py  test_locators.py  test_magnitude.py  test_mcp_server.py  test_mcp_writes.py  test_miniwob.py  test_multiwrite.py  test_neighbor_anchor.py  test_obs.py  test_parallel.py  test_pin.py  test_press_gate.py  test_provider_live.py  test_record.py  test_record_caption.py  test_recorder_ceiling.py  test_recorder_fidelity.py  test_recorder_spike.py  test_reflexion.py  test_regression_gate.py  test_replan.py  test_run_batch.py  test_safety.py  (+16 more)
(+66 files in other folders)
