[project]
name = "ultracua"
version = "0.57.0"
description = "A Computer Use Agent that drives a web browser at 5-10x human speed."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "xxhash>=3.7.0",
]

[project.scripts]
ultracua = "ultracua:main"
ultracua-daemon = "ultracua.daemon:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
bench = [
    "miniwob>=1.0",
]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
providers = [
    "google-genai>=2.8.0",
    "openai>=2.42.0",
]
# H2 flows-as-tools: the MCP server (`ultracua flow serve-mcp`). Optional — the core package and the
# mcpserver module import without it; only actually serving needs the SDK (`uv sync --group mcp`).
mcp = [
    "mcp>=1.28.0",
]
